[tool.poetry]
name = "with_poetry"
version = "0.1.0"
description = ""
authors = ["Bodan1992 <bodan1992@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"
selene = "^2.0.0b5"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
allure-pytest = "^2.9.45"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
